tests/snapshots/derive__debug_nested_map.snap
---
source: tests/derive.rs
expression: "BTreeMap::from([(Demo { foo: 5, bar: \"hello\" }, 60),\n            (Demo { foo: 5, bar: \"Hello, world! I am a very long string\" },\n                12)])"
---
>>> pretty
{
    [
        Demo {
            foo: 5,
            bar: "Hello, world! I am a very long string",
        },
    ] = 12;
    [Demo { foo: 5, bar: "hello" }] = 60;
}

>>> color
[31m{[0m
    [31m[[0m
        [32mDemo[0m [31m{[0m
            foo[31m:[0m 5[31m,[0m
            bar[31m:[0m [33m[31m"[33mHello, world! I am a very long string[31m"[33m[0m[31m,[0m
        [31m}[0m[31m,[0m
    [31m][0m [31m=[0m 12[31m;[0m
    [31m[[0m[32mDemo[0m [31m{[0m foo[31m:[0m 5[31m,[0m bar[31m:[0m [33m[31m"[33mhello[31m"[33m[0m [31m}[0m[31m][0m [31m=[0m 60[31m;[0m
[31m}[0m


